--- a/task0001/1.7/blog.html
+++ b/task0001/1.7/blog.html
@@ -6,89 +6,226 @@
     <link type="text/css" rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-    <div class="header">
-        <div class="headMain">
-            <span>Bcupwater</span>
-            <ul>
-                <li><a href="index.html">首页</a></li>
-                <li><a href="blog.html">文章</a></li>
-                <li><a href="gallery.html">作品</a></li>
-                <li><a href="about.html">关于</a></li>
-            </ul>
+    <div class="context">
+        <div class="header">
+            <div class="headMain">
+                <span>Bcupwater</span>
+                <ul>
+                    <li><a href="index.html">首页</a></li>
+                    <li><a href="blog.html">文章</a></li>
+                    <li><a href="gallery.html">作品</a></li>
+                    <li><a href="about.html">关于</a></li>
+                </ul>
+            </div>
+            <img class="logoImg" src="img/icon-github.png" />
         </div>
-        <img class="logoImg" src="img/icon-github.png" />
-    </div>
 
-    <div style="height: 500px">文章</div>
+        <div class="blogContext">
+            <div class="blogMain">
+                <div class="blogAticle">
+                    <div class="myAticle">
+                        <div class="leftMark">
+                            <div class="date">4.12</div>
+                            <div class="kind">css</div>
+                        </div>
+                        <h3>这里是文章标题</h3>
+                        <h5>这里是文章副标题</h5>
+                        <p>
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文。
+                            <br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文。
+                            <br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文。
+                        </p>
+                        <div class="author">Bcupwater 发表于 4月12日</div>
+                    </div>
+                    <div class="myAticle">
+                        <div class="leftMark">
+                            <div class="date">4.12</div>
+                            <div class="kind">css</div>
+                        </div>
+                        <h3>这里是文章标题</h3>
+                        <h5>这里是文章副标题</h5>
+                        <p>
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文。
+                            <br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文。
+                            <br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文。
+                        </p>
+                        <div class="author">Bcupwater 发表于 4月12日</div>
+                    </div>
+                    <div class="myAticle">
+                        <div class="leftMark">
+                            <div class="date">4.12</div>
+                            <div class="kind">css</div>
+                        </div>
+                        <h3>这里是文章标题</h3>
+                        <h5>这里是文章副标题</h5>
+                        <p>
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文。
+                            <br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文。
+                            <br />
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，
+                            这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文，这里是正文。
+                        </p>
+                        <div class="author">Bcupwater 发表于 4月12日</div>
+                    </div>
+                    <div class="page">
+                        <a href="#">第一页</a>
+                        <a href="#">上一页</a>
+                        <a href="#">1</a>
+                        <a href="#">2</a>
+                        <a href="#">3</a>
+                        <a href="#">4</a>
+                        <a href="#">...</a>
+                        <a href="#">下一页</a>
+                        <a href="#">最后页</a>
+                    </div>
+                </div>
+                <div class="blogNav">
+                    <div class="search">
+                            <input type="text" name="search" placeholder="请输入关键字">
+                            <div id="enter">GO</div> 
+                    </div>
+                    <div class="kind">
+                        <a href="#">
+                            &nbsp;&nbsp;HTML
+                        </a>
+                        <a href="#">
+                            &nbsp;&nbsp;CSS
+                        </a>
+                        <a href="#">
+                            &nbsp;&nbsp;JavaScript 
+                        </a>
+                        <a href="#">
+                            &nbsp;&nbsp;其他文章
+                        </a>
+                    </div>
+                    <div class="dateTime">
 
-    <div class="footer">
-        <div class="navBar">
-            <span><a href="index.html">首页</a></span>
-            <span><a href="blog.html">文章</a></span>
-            <span><a href="gallery.html">作品</a></span>
-            <span id="lastspan"><a href="about.html">关于</a></span>
-        </div>
-        <div class="footerMain">
-            <div class="friendURL">
-                <p><a href="#">学习资料</a></p>
-                <span>
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a>
-                </span>
-            </div>
-            <div class="friendURL">
-                <p><a href="#">学习资料</a></p>
-                <span>
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a>
-                </span>
-            </div>
-            <div class="friendURL">
-                <p><a href="#">学习资料</a></p>
-                <span>
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a>
-                </span>
-            </div>
-            <div class="friendURL">
-                <p><a href="#">学习资料</a></p>
-                <span>
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a>
-                </span>
-            </div>
-            <div class="friendURL">
-                <p><a href="#">学习资料</a></p>
-                <span>
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a>
-                </span>
+                    </div>
+                    <div class="tags">
+                        
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="copyRight">
-            <p>版权信息</p>
-            <img class="footLogoImg" src="img/icon-github.png" />
+
+        <div class="footer">
+            <div class="navBar">
+                <span><a href="index.html">首页</a></span>
+                <span><a href="blog.html">文章</a></span>
+                <span><a href="gallery.html">作品</a></span>
+                <span id="lastspan"><a href="about.html">关于</a></span>
+            </div>
+            <div class="footerMain">
+                <div class="friendURL">
+                    <p><a href="#">学习资料</a></p>
+                    <span>
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a>
+                    </span>
+                </div>
+                <div class="friendURL">
+                    <p><a href="#">学习资料</a></p>
+                    <span>
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a>
+                    </span>
+                </div>
+                <div class="friendURL">
+                    <p><a href="#">学习资料</a></p>
+                    <span>
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a>
+                    </span>
+                </div>
+                <div class="friendURL">
+                    <p><a href="#">学习资料</a></p>
+                    <span>
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a>
+                    </span>
+                </div>
+                <div class="friendURL">
+                    <p><a href="#">学习资料</a></p>
+                    <span>
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a>
+                    </span>
+                </div>
+            </div>
+            <div class="copyRight">
+                <p>版权信息</p>
+                <img class="footLogoImg" src="img/icon-github.png" />
+            </div>
         </div>
-    </div>
+    </div>  
 </body>
 </html>
