--- a/task0001/1.7/index.html
+++ b/task0001/1.7/index.html
@@ -6,88 +6,146 @@
     <link type="text/css" rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-    <div class="header">
-        <div class="headMain">
-            <span>Bcupwater</span>
-            <ul>
-                <li><a href="index.html">首页</a></li>
-                <li><a href="blog.html">文章</a></li>
-                <li><a href="gallery.html">作品</a></li>
-                <li><a href="about.html">关于</a></li>
-            </ul>
+    <div class="context">
+        <div class="header">
+            <div class="headMain">
+                <span>Bcupwater</span>
+                <ul>
+                    <li><a href="index.html">首页</a></li>
+                    <li><a href="blog.html">文章</a></li>
+                    <li><a href="gallery.html">作品</a></li>
+                    <li><a href="about.html">关于</a></li>
+                </ul>
+            </div>
+            <a href="https://github.com/">
+                <img class="logoImg" src="img/icon-github.png" />
+            </a>
         </div>
-        <img class="logoImg" src="img/icon-github.png" />
-    </div>
 
-    <div style="height: 500px">首页</div>
+        <div class="indexContext">
+            <img src="img/banner-bg.jpg" />
+            <div class="desc">
+                <div class="aticle">
+                    <h4>标题1</h4>
+                    <p>
+                        &nbsp;&nbsp;&nbsp;&nbsp;
+                        正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文
+                        正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文
+                        正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文
+                    </p>
+                </div>
+            </div>
+            <div class="aticles">
+                <div class="topic">
+                    <div class="aticle">
+                        <img src="img/city1.jpg" />
+                        <p>
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            一些没有用的描述，一些没有用的描述，一些没有用的描述，一些没有用的描述。
+                            一些没有用的描述，一些没有用的描述，一些没有用的描述，一些没有用的描述。
+                            一些没有用的描述，一些没有用的描述，一些没有用的描述，一些没有用的描述。
+                        </p>
+                    </div>
+                    <div class="aticle">
+                        <img src="img/city2.jpg" />
+                        <p>
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            一些没有用的描述，一些没有用的描述，一些没有用的描述，一些没有用的描述。
+                            一些没有用的描述，一些没有用的描述，一些没有用的描述，一些没有用的描述。
+                            一些没有用的描述，一些没有用的描述，一些没有用的描述，一些没有用的描述。
+                        </p>
+                    </div>
+                    <div class="aticle" id="aticle3">
+                        <img src="img/city3.jpg" />
+                        <p>
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            一些没有用的描述，一些没有用的描述，一些没有用的描述，一些没有用的描述。
+                            一些没有用的描述，一些没有用的描述，一些没有用的描述，一些没有用的描述。
+                            一些没有用的描述，一些没有用的描述，一些没有用的描述，一些没有用的描述。
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="myDesc">
+                <img src="img/city2.jpg" />
+                <h3>Hi, i`m Bcupwater</h3>
+                <p>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，
+                    这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，
+                    这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，这是一段自我介绍。
+                </p>
+            </div>
+        </div>
 
-    <div class="footer">
-        <div class="navBar">
-            <span><a href="index.html">首页</a></span>
-            <span><a href="blog.html">文章</a></span>
-            <span><a href="gallery.html">作品</a></span>
-            <span id="lastspan"><a href="about.html">关于</a></span>
-        </div>
-        <div class="footerMain">
-            <div class="friendURL">
-                <p><a href="#">学习资料</a></p>
-                <span>
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a>
-                </span>
+        <div class="footer">
+            <div class="navBar">
+                <span><a href="index.html">首页</a></span>
+                <span><a href="blog.html">文章</a></span>
+                <span><a href="gallery.html">作品</a></span>
+                <span id="lastspan"><a href="about.html">关于</a></span>
             </div>
-            <div class="friendURL">
-                <p><a href="#">学习资料</a></p>
-                <span>
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a>
-                </span>
+            <div class="footerMain">
+                <div class="friendURL">
+                    <p><a href="#">学习资料</a></p>
+                    <span>
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a>
+                    </span>
+                </div>
+                <div class="friendURL">
+                    <p><a href="#">学习资料</a></p>
+                    <span>
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a>
+                    </span>
+                </div>
+                <div class="friendURL">
+                    <p><a href="#">学习资料</a></p>
+                    <span>
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a>
+                    </span>
+                </div>
+                <div class="friendURL">
+                    <p><a href="#">学习资料</a></p>
+                    <span>
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a>
+                    </span>
+                </div>
+                <div class="friendURL">
+                    <p><a href="#">学习资料</a></p>
+                    <span>
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a>
+                    </span>
+                </div>
             </div>
-            <div class="friendURL">
-                <p><a href="#">学习资料</a></p>
-                <span>
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a>
-                </span>
+            <div class="copyRight">
+                <p>版权信息</p>
+                <img class="footLogoImg" src="img/icon-github.png" />
             </div>
-            <div class="friendURL">
-                <p><a href="#">学习资料</a></p>
-                <span>
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a>
-                </span>
-            </div>
-            <div class="friendURL">
-                <p><a href="#">学习资料</a></p>
-                <span>
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a>
-                </span>
-            </div>
-        </div>
-        <div class="copyRight">
-            <p>版权信息</p>
-            <img class="footLogoImg" src="img/icon-github.png" />
         </div>
     </div>
 </body>
