--- a/task0001/1.7/about.html
+++ b/task0001/1.7/about.html
@@ -6,88 +6,94 @@
     <link type="text/css" rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-    <div class="header">
-        <div class="headMain">
-            <span>Bcupwater</span>
-            <ul>
-                <li><a href="index.html">首页</a></li>
-                <li><a href="blog.html">文章</a></li>
-                <li><a href="gallery.html">作品</a></li>
-                <li><a href="about.html">关于</a></li>
-            </ul>
+    <div class="context">
+        <div class="header">
+            <div class="headMain">
+                <span>Bcupwater</span>
+                <ul>
+                    <li><a href="index.html">首页</a></li>
+                    <li><a href="blog.html">文章</a></li>
+                    <li><a href="gallery.html">作品</a></li>
+                    <li><a href="about.html">关于</a></li>
+                </ul>
+            </div>
+            <img class="logoImg" src="img/icon-github.png" />
         </div>
-        <img class="logoImg" src="img/icon-github.png" />
-    </div>
 
-    <div style="height: 500px">关于</div>
+        <div class="aboutContext">
+            <div class="aboutMain">
+                <img class="myPic" src="img/city2.jpg" />
+            </div>
+        </div>
 
-    <div class="footer">
-        <div class="navBar">
-            <span><a href="index.html">首页</a></span>
-            <span><a href="blog.html">文章</a></span>
-            <span><a href="gallery.html">作品</a></span>
-            <span id="lastspan"><a href="about.html">关于</a></span>
-        </div>
-        <div class="footerMain">
-            <div class="friendURL">
-                <p><a href="#">学习资料</a></p>
-                <span>
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a>
-                </span>
+        <div class="footer">
+            <div class="navBar">
+                <span><a href="index.html">首页</a></span>
+                <span><a href="blog.html">文章</a></span>
+                <span><a href="gallery.html">作品</a></span>
+                <span id="lastspan"><a href="about.html">关于</a></span>
             </div>
-            <div class="friendURL">
-                <p><a href="#">学习资料</a></p>
-                <span>
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a>
-                </span>
+            <div class="footerMain">
+                <div class="friendURL">
+                    <p><a href="#">学习资料</a></p>
+                    <span>
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a>
+                    </span>
+                </div>
+                <div class="friendURL">
+                    <p><a href="#">学习资料</a></p>
+                    <span>
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a>
+                    </span>
+                </div>
+                <div class="friendURL">
+                    <p><a href="#">学习资料</a></p>
+                    <span>
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a>
+                    </span>
+                </div>
+                <div class="friendURL">
+                    <p><a href="#">学习资料</a></p>
+                    <span>
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a>
+                    </span>
+                </div>
+                <div class="friendURL">
+                    <p><a href="#">学习资料</a></p>
+                    <span>
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a><br />
+                        <a href="#">LINK</a>
+                    </span>
+                </div>
             </div>
-            <div class="friendURL">
-                <p><a href="#">学习资料</a></p>
-                <span>
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a>
-                </span>
+            <div class="copyRight">
+                <p>版权信息</p>
+                <img class="footLogoImg" src="img/icon-github.png" />
             </div>
-            <div class="friendURL">
-                <p><a href="#">学习资料</a></p>
-                <span>
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a>
-                </span>
-            </div>
-            <div class="friendURL">
-                <p><a href="#">学习资料</a></p>
-                <span>
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a><br />
-                    <a href="#">LINK</a>
-                </span>
-            </div>
-        </div>
-        <div class="copyRight">
-            <p>版权信息</p>
-            <img class="footLogoImg" src="img/icon-github.png" />
         </div>
     </div>
 </body>
