--- a/task0001/1.7/blog.html
+++ b/task0001/1.7/blog.html
@@ -148,10 +148,72 @@
                         </a>
                     </div>
                     <div class="dateTime">
-
+                        <div class="dateMain">
+                            <div class="year">
+                                <span class="leftYear">&lt;</span>
+                                2015.04
+                                <span class="rightYear">&gt;</span>
+                            </div>
+                            <div class="sevenDay">
+                                <span>M</span>
+                                <span>T</span>
+                                <span>W</span>
+                                <span>T</span>
+                                <span>F</span>
+                                <span>S</span>
+                                <span>S</span>
+                            </div>
+                            <div class="sevenDay">
+                                <a href="#">1</a>
+                                <a href="#">2</a>
+                                <a href="#">3</a>
+                                <a href="#">4</a>
+                                <a href="#">5</a>
+                                <a href="#">6</a>
+                                <a href="#">7</a>
+                            </div>
+                            <div class="sevenDay">
+                                <a href="#">8</a>
+                                <a href="#">9</a>
+                                <a href="#">10</a>
+                                <a href="#">11</a>
+                                <a href="#">12</a>
+                                <a href="#">13</a>
+                                <a href="#">14</a>
+                            </div>
+                            <div class="sevenDay">
+                                <a href="#">15</a>
+                                <a href="#">16</a>
+                                <a href="#">17</a>
+                                <a href="#">18</a>
+                                <a href="#">19</a>
+                                <a href="#">20</a>
+                                <a href="#">21</a>
+                            </div>
+                            <div class="sevenDay">
+                                <a href="#">22</a>
+                                <a href="#">23</a>
+                                <a href="#">24</a>
+                                <a href="#">25</a>
+                                <a href="#">26</a>
+                                <a href="#">27</a>
+                                <a href="#">28</a>
+                            </div>
+                            <div class="otherDay">
+                                <a href="#">29</a>
+                                <a href="#">30</a>
+                                <a href="#">31</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="tags">
-                        
+                        <h6>Tags</h6>
+                        <p>
+                            <span class="SizeLev1">JavaScript</span> <span class="SizeLev3">CSS</span> flex
+                            WebGL <span class="SizeLev1">HTML</span> Canvas proto
+                            <span class="SizeLev2">HTML5</span> grid nodeJS
+                            CSS3 <span class="SizeLev2">jQuery</span> <span class="SizeLev2">ECharts</span>
+                        </p>
                     </div>
                 </div>
             </div>
