--- a/task0001/1.7/about.html
+++ b/task0001/1.7/about.html
@@ -22,7 +22,87 @@
 
         <div class="aboutContext">
             <div class="aboutMain">
-                <img class="myPic" src="img/city2.jpg" />
+                <div class="imgDivBig">
+                    <img class="myPicBig" src="img/city2.jpg" />
+                </div>
+                <div class="descWord">
+                    <p class="leftWord">
+                        NAME
+                    </p>
+                    <p class="rightWord">
+                        这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，
+                        这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，这是一段自我介绍，
+                        这是一段自我介绍，这是一段自我介绍。
+                    </p>
+                </div>
+                <div class="imgDivSmall">
+                    <img class="myPicSmall" src="img/city1.jpg" />
+                </div>
+                <div class="descWord">
+                    <p class="leftWord">
+                        联系方式
+                    </p>
+                    <p class="rightWord">
+                        联系方式1: XXXXXXXXXX<br />
+                        联系方式2: XXXXXX<br />
+                        联系方式3: XXXXXXXXXXXX
+                    </p>
+                </div>
+                <div class="imgDivSmall">
+                    <img class="myPicSmall" src="img/city3.jpg" />
+                </div>
+                <div class="descDateWord">
+                    <p class="leftWord">
+                        教育经历
+                    </p>
+                    <p class="centerWord">
+                        2008
+                    </p>
+                    <p class="rightWord">
+                        某某某高中
+                    </p>
+                </div>
+                <div class="descDateWord">
+                    <p class="centerWord">
+                        2011
+                    </p>
+                    <p class="rightWord">
+                        某某某高中
+                    </p>
+                </div>
+                <div class="descDateWord">
+                    <p class="centerWord">
+                        2014
+                    </p>
+                    <p class="rightWord">
+                        某某某大学
+                    </p>
+                </div>
+                <div class="imgDivSmall">
+                    <img class="myPicSmall" src="img/city2.jpg" />
+                </div>
+                <div class="descDateWord">
+                    <p class="leftWord">
+                        实习经历
+                    </p>
+                    <p class="centerWord">
+                        2008
+                    </p>
+                    <p class="rightWord">
+                        某某某公司
+                    </p>
+                </div>
+                <div class="descDateWord">
+                    <p class="centerWord">
+                        2011
+                    </p>
+                    <p class="rightWord">
+                        某某某公司
+                    </p>
+                </div>
+                <div class="timeLine">
+
+                </div>
             </div>
         </div>
 
