--- a/task0001/1.7/gallery.html
+++ b/task0001/1.7/gallery.html
@@ -20,7 +20,22 @@
             <img class="logoImg" src="img/icon-github.png" />
         </div>
 
-        <div style="height: 500px">作品</div>
+        <div class="galleryContext">
+            <div class="galleryMain">
+                <div class="waterfallsFlow">
+
+                </div>
+                <div class="rightBar">
+                    <div class="search">
+                        <input type="text" name="search" placeholder="请输入关键字">
+                        <div id="enter">GO</div> 
+                    </div>
+                    <div class="rank">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="footer">
             <div class="navBar">
